--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
             <div class="container">
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="index.html" style="color: var(--primary);">Home</a></li>
-                    
                     <li class="nav-item"><a href="models.html" style="color: var(--accent);">ALL MODELS</a></li>
-
                     <li class="nav-item dropdown">
                         <a href="models.html#motorcycles">Motorcycles <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
@@ -46,10 +44,8 @@
                             <li><a href="models/zest110.html">Zest 110</a></li>
                         </ul>
                     </li>
-                    
                     <li class="nav-item"><a href="models.html#electric">Electric</a></li>
                     <li class="nav-item"><a href="models.html#mopeds">Mopeds</a></li>
-
                     <li class="nav-item"><a href="service.html">Services</a></li>
                     <li class="nav-item"><a href="contact.html">Contact</a></li>
                 </ul>
@@ -101,7 +97,7 @@
                     <div class="clean-card-content">
                         <h3>New Jupiter 110</h3>
                         <div class="price">Zyada Ka Fayda</div>
-                        <div class="clean-card-img"><img src="assets/jupiter110.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/600x400?text=Jupiter+110'"></div>
+                        <div class="clean-card-img"><img src="assets/jupiter113.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/600x400?text=Jupiter+110'"></div>
                     </div>
                 </a>
 
@@ -109,7 +105,7 @@
                     <div class="clean-card-content">
                         <h3>TVS Ntorq 125</h3>
                         <div class="price">Play Smart</div>
-                        <div class="clean-card-img"><img src="assets/ntorq.jpg" alt="Ntorq" onerror="this.src='https://placehold.co/600x400?text=Ntorq+125'"></div>
+                        <div class="clean-card-img"><img src="assets/ntroq125.jpg" alt="Ntorq" onerror="this.src='https://placehold.co/600x400?text=Ntorq+125'"></div>
                     </div>
                 </a>
 
