--- a/models.html
+++ b/models.html
@@ -47,31 +47,31 @@
                 <h2 style="font-family: 'Oswald', sans-serif; font-size: 2rem; margin-bottom: 30px; border-left: 5px solid var(--accent); padding-left: 15px;">MOTORCYCLES</h2>
                 <div class="grid-3">
                     <a href="models/rr310.html" class="clean-card">
-                        <div class="clean-card-img"><img src="assets/rr310.jpg" alt="Apache RR 310" onerror="this.src='https://placehold.co/600x400?text=RR+310'"></div>
+                        <div class="clean-card-img"><img src="assets/rr310.jpg" alt="Apache RR 310"></div>
                         <div class="clean-card-content"><h3>TVS Apache RR 310</h3><div class="price">Starting at ₹ 2,72,000/-</div></div>
                     </a>
                     <a href="models/apache200.html" class="clean-card">
-                        <div class="clean-card-img"><img src="assets/apache200.jpg" alt="Apache 200" onerror="this.src='https://placehold.co/600x400?text=RTR+200+4V'"></div>
+                        <div class="clean-card-img"><img src="assets/apache200.jpg" alt="Apache 200"></div>
                         <div class="clean-card-content"><h3>Apache RTR 200 4V</h3><div class="price">Starting at ₹ 1,46,000/-</div></div>
                     </a>
                     <a href="models/apache160.html" class="clean-card">
-                        <div class="clean-card-img"><img src="assets/apache160.jpg" alt="Apache 160" onerror="this.src='https://placehold.co/600x400?text=RTR+160+4V'"></div>
+                        <div class="clean-card-img"><img src="assets/apache160.jpg" alt="Apache 160"></div>
                         <div class="clean-card-content"><h3>Apache RTR 160 4V</h3><div class="price">Starting at ₹ 1,24,000/-</div></div>
                     </a>
                     <a href="models/raider.html" class="clean-card">
-                        <div class="clean-card-img"><img src="assets/raider.jpg" alt="Raider" onerror="this.src='https://placehold.co/600x400?text=Raider'"></div>
+                        <div class="clean-card-img"><img src="assets/raider.jpg" alt="Raider"></div>
                         <div class="clean-card-content"><h3>TVS Raider 125</h3><div class="price">Starting at ₹ 95,000/-</div></div>
                     </a>
                     <a href="models/ronin.html" class="clean-card">
-                        <div class="clean-card-img"><img src="assets/ronin.jpg" alt="Ronin" onerror="this.src='https://placehold.co/600x400?text=Ronin'"></div>
+                        <div class="clean-card-img"><img src="assets/ronin.jpg" alt="Ronin"></div>
                         <div class="clean-card-content"><h3>TVS Ronin</h3><div class="price">Starting at ₹ 1,49,000/-</div></div>
                     </a>
                     <a href="models/radeon.html" class="clean-card">
-                        <div class="clean-card-img"><img src="assets/radeon.jpg" alt="Radeon" onerror="this.src='https://placehold.co/600x400?text=Radeon'"></div>
+                        <div class="clean-card-img"><img src="assets/radeon.jpg" alt="Radeon"></div>
                         <div class="clean-card-content"><h3>TVS Radeon</h3><div class="price">Starting at ₹ 62,000/-</div></div>
                     </a>
                     <a href="models/sport.html" class="clean-card">
-                        <div class="clean-card-img"><img src="assets/sport.jpg" alt="Sport" onerror="this.src='https://placehold.co/600x400?text=Sport'"></div>
+                        <div class="clean-card-img"><img src="assets/sport.jpg" alt="Sport"></div>
                         <div class="clean-card-content"><h3>TVS Sport</h3><div class="price">Starting at ₹ 59,000/-</div></div>
                     </a>
                 </div>
@@ -81,19 +81,19 @@
                 <h2 style="font-family: 'Oswald', sans-serif; font-size: 2rem; margin-bottom: 30px; border-left: 5px solid var(--accent); padding-left: 15px;">SCOOTERS</h2>
                 <div class="grid-3">
                     <a href="models/jupiter113.html" class="clean-card">
-                        <div class="clean-card-img"><img src="assets/jupiter113.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/600x400?text=Jupiter+110'"></div>
+                        <div class="clean-card-img"><img src="assets/jupiter113.jpg" alt="Jupiter 110"></div>
                         <div class="clean-card-content"><h3>New Jupiter 110</h3><div class="price">Starting at ₹ 73,000/-</div></div>
                     </a>
                     <a href="models/jupiter125.html" class="clean-card">
-                        <div class="clean-card-img"><img src="assets/jupiter125.jpg" alt="Jupiter 125" onerror="this.src='https://placehold.co/600x400?text=Jupiter+125'"></div>
+                        <div class="clean-card-img"><img src="assets/jupiter125.jpg" alt="Jupiter 125"></div>
                         <div class="clean-card-content"><h3>Jupiter 125</h3><div class="price">Starting at ₹ 86,000/-</div></div>
                     </a>
                     <a href="models/ntorq125.html" class="clean-card">
-                        <div class="clean-card-img"><img src="assets/ntroq125.jpg" alt="Ntorq" onerror="this.src='https://placehold.co/600x400?text=Ntorq+125'"></div>
+                        <div class="clean-card-img"><img src="assets/ntorq125.jpg" alt="Ntorq"></div>
                         <div class="clean-card-content"><h3>Ntorq 125</h3><div class="price">Starting at ₹ 84,000/-</div></div>
                     </a>
                     <a href="models/zest110.html" class="clean-card">
-                        <div class="clean-card-img"><img src="assets/zest.jpg" alt="Zest" onerror="this.src='https://placehold.co/600x400?text=Zest+110'"></div>
+                        <div class="clean-card-img"><img src="assets/zest110.jpg" alt="Zest"></div>
                         <div class="clean-card-content"><h3>Scooty Zest 110</h3><div class="price">Starting at ₹ 75,000/-</div></div>
                     </a>
                 </div>
@@ -103,7 +103,7 @@
                 <h2 style="font-family: 'Oswald', sans-serif; font-size: 2rem; margin-bottom: 30px; border-left: 5px solid var(--accent); padding-left: 15px;">ELECTRIC</h2>
                 <div class="grid-3">
                     <a href="models/iqube.html" class="clean-card">
-                        <div class="clean-card-img"><img src="assets/iqube.jpg" alt="iQube" onerror="this.src='https://placehold.co/600x400?text=iQube'"></div>
+                        <div class="clean-card-img"><img src="assets/iqube.jpg" alt="iQube"></div>
                         <div class="clean-card-content"><h3>TVS iQube</h3><div class="price">Starting at ₹ 1,17,000/-</div></div>
                     </a>
                 </div>
@@ -113,7 +113,7 @@
                 <h2 style="font-family: 'Oswald', sans-serif; font-size: 2rem; margin-bottom: 30px; border-left: 5px solid var(--accent); padding-left: 15px;">MOPEDS</h2>
                 <div class="grid-3">
                     <a href="models/xl100.html" class="clean-card">
-                        <div class="clean-card-img"><img src="assets/xl100.jpg" alt="XL100" onerror="this.src='https://placehold.co/600x400?text=XL100'"></div>
+                        <div class="clean-card-img"><img src="assets/xl100.jpg" alt="XL100"></div>
                         <div class="clean-card-content"><h3>XL100 Heavy Duty</h3><div class="price">Starting at ₹ 46,000/-</div></div>
                     </a>
                 </div>
