--- a/models/zest110.html
+++ b/models/zest110.html
@@ -68,7 +68,7 @@
                 </div>
             </div>
             <div class="pro-image-side">
-                <img src="../assets/zest.jpg" alt="TVS Zest" onerror="this.src='https://placehold.co/800x600?text=Zest+110+Image'">
+                <img src="../assets/zest110.jpg" alt="TVS Zest" onerror="this.src='https://placehold.co/800x600?text=Zest+110+Image'">
             </div>
         </div>
     </div>
