--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <div class="clean-card-content">
                         <h3>TVS Ntorq 125</h3>
                         <div class="price">Play Smart</div>
-                        <div class="clean-card-img"><img src="assets/ntroq125.jpg" alt="Ntorq" onerror="this.src='https://placehold.co/600x400?text=Ntorq+125'"></div>
+                        <div class="clean-card-img"><img src="assets/ntorq125.jpg" alt="Ntorq" onerror="this.src='https://placehold.co/600x400?text=Ntorq+125'"></div>
                     </div>
                 </a>
 
@@ -129,7 +129,7 @@
                     <div class="clean-card-content">
                         <h3>Scooty Zest 110</h3>
                         <div class="price">Compact Power</div>
-                        <div class="clean-card-img"><img src="assets/zest.jpg" alt="Zest" onerror="this.src='https://placehold.co/600x400?text=Zest+110'"></div>
+                        <div class="clean-card-img"><img src="assets/zest110.jpg" alt="Zest" onerror="this.src='https://placehold.co/600x400?text=Zest+110'"></div>
                     </div>
                 </a>
 
@@ -174,6 +174,7 @@
     </footer>
 
     <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
+    <a href="https://www.instagram.com/tirumalatvs_bidarahalli/" class="instagram-float" target="_blank">📸</a>
     <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
 
     <script>
