--- a/models.html
+++ b/models.html
@@ -125,7 +125,9 @@
     <footer>
         <div class="container text-center" style="padding: 20px 0; color: #666;"><p>© 2025 Tirumala TVS. All rights reserved.</p></div>
     </footer>
+    
     <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
+    <a href="https://www.instagram.com/tirumalatvs_bidarahalli/" class="instagram-float" target="_blank">📸</a>
     <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
 
     <script>
