--- a/index.html
+++ b/index.html
@@ -88,59 +88,96 @@
         </div>
     </div>
 
+    <section class="welcome-section">
+        <div class="container welcome-grid">
+            <div class="welcome-text">
+                <div class="welcome-badge">👋 WELCOME TO</div>
+                <h2>Tirumala TVS</h2>
+                <p>We are committed to being a socially responsible and leading manufacturer.</p>
+                <a href="about.html" class="btn btn-outline" style="border-color: white; color: white; margin-top: 20px;">Read Full History →</a>
+            </div>
+            <div class="welcome-icons">
+                <div class="icon-box"><div class="icon-circle">✓</div><h4>Over 50 million Vehicles</h4></div>
+                <div class="icon-box"><div class="icon-circle">✓</div><h4>A vehicle for everyone</h4></div>
+                <div class="icon-box"><div class="icon-circle">✓</div><h4>Presence in 80+ countries</h4></div>
+                <div class="icon-box"><div class="icon-circle">✓</div><h4>Industry Leader TVSM</h4></div>
+            </div>
+        </div>
+    </section>
+
     <section class="section-padding bg-light">
         <div class="container">
             <div class="text-center section-header"><h2>Top Selling Vehicles</h2><p>Our customers' favorite rides.</p></div>
             <div class="grid-3" style="margin-top: 40px;">
                 
                 <a href="models/jupiter113.html" class="clean-card">
+                    <div class="clean-card-img"><img src="assets/jupiter113.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/600x400?text=Jupiter+110'"></div>
                     <div class="clean-card-content">
                         <h3>New Jupiter 110</h3>
                         <div class="price">Zyada Ka Fayda</div>
-                        <div class="clean-card-img"><img src="assets/jupiter113.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/600x400?text=Jupiter+110'"></div>
                     </div>
                 </a>
 
                 <a href="models/ntorq125.html" class="clean-card">
+                    <div class="clean-card-img"><img src="assets/ntorq125.jpg" alt="Ntorq" onerror="this.src='https://placehold.co/600x400?text=Ntorq+125'"></div>
                     <div class="clean-card-content">
                         <h3>TVS Ntorq 125</h3>
                         <div class="price">Play Smart</div>
-                        <div class="clean-card-img"><img src="assets/ntorq125.jpg" alt="Ntorq" onerror="this.src='https://placehold.co/600x400?text=Ntorq+125'"></div>
                     </div>
                 </a>
 
                 <a href="models/raider.html" class="clean-card">
+                    <div class="clean-card-img"><img src="assets/raider.jpg" alt="Raider" onerror="this.src='https://placehold.co/600x400?text=Raider+125'"></div>
                     <div class="clean-card-content">
                         <h3>TVS Raider 125</h3>
                         <div class="price">The Wicked Ride</div>
-                        <div class="clean-card-img"><img src="assets/raider.jpg" alt="Raider" onerror="this.src='https://placehold.co/600x400?text=Raider'"></div>
                     </div>
                 </a>
 
                 <a href="models/iqube.html" class="clean-card">
+                    <div class="clean-card-img"><img src="assets/iqube.jpg" alt="iQube" onerror="this.src='https://placehold.co/600x400?text=iQube+EV'"></div>
                     <div class="clean-card-content">
                         <h3>TVS iQube</h3>
                         <div class="price">Smartly Simple</div>
-                        <div class="clean-card-img"><img src="assets/iqube.jpg" alt="iQube" onerror="this.src='https://placehold.co/600x400?text=iQube'"></div>
                     </div>
                 </a>
 
                 <a href="models/zest110.html" class="clean-card">
+                    <div class="clean-card-img"><img src="assets/zest110.jpg" alt="Zest" onerror="this.src='https://placehold.co/600x400?text=Zest+110'"></div>
                     <div class="clean-card-content">
                         <h3>Scooty Zest 110</h3>
                         <div class="price">Compact Power</div>
-                        <div class="clean-card-img"><img src="assets/zest110.jpg" alt="Zest" onerror="this.src='https://placehold.co/600x400?text=Zest+110'"></div>
                     </div>
                 </a>
 
                 <a href="models/apache160.html" class="clean-card">
+                    <div class="clean-card-img"><img src="assets/apache160.jpg" alt="Apache 160" onerror="this.src='https://placehold.co/600x400?text=Apache+160'"></div>
                     <div class="clean-card-content">
                         <h3>Apache RTR 160 4V</h3>
                         <div class="price">Racing DNA</div>
-                        <div class="clean-card-img"><img src="assets/apache160.jpg" alt="Apache 160" onerror="this.src='https://placehold.co/600x400?text=Apache+160'"></div>
                     </div>
                 </a>
 
+            </div>
+        </div>
+    </section>
+
+    <section class="section-padding" style="background-color: #f4f4f4;">
+        <div class="container">
+            <div class="text-center section-header"><h2>Happy Riders</h2><p>What our customers say about Tirumala TVS.</p></div>
+            <div class="grid-3" style="margin-top: 40px;">
+                <div class="review-card"><div class="stars" style="color:#f1c40f;">★★★★★</div><p>"Excellent experience buying my new Apache RTR 160 4V. The staff explained all features clearly and the delivery was on time."</p><h4>– Arjun Kumar</h4></div>
+                <div class="review-card"><div class="stars" style="color:#f1c40f;">★★★★★</div><p>"I was confused between Jupiter and Ntorq. The sales team helped me compare them patiently. Went with the Ntorq!"</p><h4>– Priya Sharma</h4></div>
+                <div class="review-card"><div class="stars" style="color:#f1c40f;">★★★★★</div><p>"Best service center in Bidarahalli. Fast, reliable, and they don't overcharge for unnecessary parts."</p><h4>– Rahul M.</h4></div>
+                <div class="review-card"><div class="stars" style="color:#f1c40f;">★★★★★</div><p>"Bought the new iQube. The subsidy process was handled smoothly by the team. Very happy with my EV."</p><h4>– Karthik R.</h4></div>
+                <div class="review-card"><div class="stars" style="color:#f1c40f;">★★★★☆</div><p>"Very happy with my TVS Raider. The mileage is great for city commuting. Showroom experience was decent."</p><h4>– Anjali Deshmukh</h4></div>
+                <div class="review-card"><div class="stars" style="color:#f1c40f;">★★★★★</div><p>"Got my Ntorq serviced here. The mechanics are skilled and resolved the starting issue quickly. Highly recommended!"</p><h4>– Vikram Singh</h4></div>
+                <div class="review-card"><div class="stars" style="color:#f1c40f;">★★★★★</div><p>"Purchased a TVS XL100 for my shop deliveries. Tough vehicle and the finance options provided were very easy."</p><h4>– Suresh Reddy</h4></div>
+                <div class="review-card"><div class="stars" style="color:#f1c40f;">★★★★★</div><p>"I love my new Jupiter 125! The under-seat storage is huge. Thanks to Tirumala TVS for the quick registration."</p><h4>– Meera Nair</h4></div>
+                <div class="review-card"><div class="stars" style="color:#f1c40f;">★★★★☆</div><p>"Friendly staff and good ambiance. Test drive arrangement was instant. Happy to be a part of the TVS family."</p><h4>– Deepak G.</h4></div>
+                <div class="review-card"><div class="stars" style="color:#f1c40f;">★★★★★</div><p>"Servicing my Apache 200 here for 2 years. Never had a complaint. The bike feels brand new after every service."</p><h4>– Rohan Gowda</h4></div>
+                <div class="review-card"><div class="stars" style="color:#f1c40f;">★★★★★</div><p>"The Ronin is a beast! The delivery ceremony was special, they really make you feel valued as a customer."</p><h4>– Samuel J.</h4></div>
+                <div class="review-card"><div class="stars" style="color:#f1c40f;">★★★★★</div><p>"Transparent pricing and no hidden costs. I appreciate the honesty of the sales manager. Great job!"</p><h4>– Lakshmi Narayan</h4></div>
             </div>
         </div>
     </section>
@@ -152,6 +189,9 @@
                 <div class="award-card"><span class="award-icon">🏆</span><h3>IMOTY 2022 Winner</h3><p>Indian Motorcycle of the Year - <strong>TVS Raider 125</strong></p></div>
                 <div class="award-card"><span class="award-icon">🥇</span><h3>J.D. Power Award</h3><p>Highest in Customer Satisfaction - Two Wheeler Service</p></div>
                 <div class="award-card"><span class="award-icon">⭐</span><h3>Manufacturer of the Year</h3><p>NDTV Car & Bike Awards - TVS Motor Company</p></div>
+                <div class="award-card"><span class="award-icon">🛵</span><h3>Most Appealing Scooter</h3><p>TVS Scooty Zest 110 - J.D. Power APEAL Award</p></div>
+                <div class="award-card"><span class="award-icon">🏍️</span><h3>Bike of the Year 2021</h3><p>Jagran Hi-Tech Awards - TVS Raider</p></div>
+                <div class="award-card"><span class="award-icon">✨</span><h3>Initial Quality Leader</h3><p>Highest Ranked Economy Motorcycle - TVS Star City+</p></div>
             </div>
         </div>
     </section>
@@ -165,7 +205,7 @@
         </div>
         <div class="footer-main">
             <div class="container footer-cols">
-                <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="about.html">About Us</a></li><li><a href="contact.html">Contact Us</a></li><li><a href="service.html">Book Service</a></li><li><a href="models.html">All Models</a></li></ul></div>
+                <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="about.html">About Us</a></li><li><a href="contact.html">Contact Us</a></li><li><a href="service.html">Book Service</a></li><li><a href="testdrive.html">Test Drive</a></li></ul></div>
                 <div class="footer-col"><h4>Models</h4><ul class="footer-links"><li><a href="models.html#motorcycles">Motorcycles</a></li><li><a href="models.html#scooters">Scooters</a></li></ul></div>
                 <div class="footer-col"><h4>Showrooms</h4><ul class="footer-links"><li><a href="contact.html">Tirumala TVS Bidarahalli</a></li></ul></div>
             </div>
@@ -183,6 +223,14 @@
             if(nav.style.display === "block") { nav.style.display = "none"; } 
             else { nav.style.display = "block"; nav.style.position="absolute"; nav.style.top="100%"; nav.style.left="0"; nav.style.width="100%"; nav.style.zIndex="1000"; }
         }
+        document.addEventListener("DOMContentLoaded", function() {
+            if (window.innerWidth <= 900) {
+                var dropdowns = document.querySelectorAll('.nav-item.dropdown > a');
+                dropdowns.forEach(function(link) {
+                    link.addEventListener('click', function(e) { e.preventDefault(); this.parentElement.classList.toggle('active'); });
+                });
+            }
+        });
         window.addEventListener('scroll', function() {
             var scrollBtn = document.querySelector('.scroll-top-btn');
             if (window.scrollY > 300) { scrollBtn.classList.add('visible'); } else { scrollBtn.classList.remove('visible'); }
