--- a/quotation.html
+++ b/quotation.html
@@ -11,90 +11,63 @@
 
     <header class="main-header">
         <div class="container header-top">
-            <a href="index.html" class="logo">Tirumala <span>TVS</span></a>
+            <a href="index.html" class="logo-img-wrapper"><img src="assets/tirumala-logo.jpg" alt="Tirumala TVS" class="header-logo-img"></a>
             <div class="header-btn-group">
-                <a href="index.html" class="btn-header">Back to Home</a>
+                <a href="service.html" class="btn-header">Book Service</a>
+                <a href="quotation.html" class="btn-header">Get Quotation</a>
+                <a href="testdrive.html" class="btn-header">Book Test Drive</a>
             </div>
         </div>
+        <div class="nav-bar"><div class="container"><ul class="nav-menu">
+            <li class="nav-item"><a href="index.html">Home</a></li>
+            <li class="nav-item"><a href="models.html">All Models</a></li>
+            <li class="nav-item"><a href="contact.html">Contact</a></li>
+        </ul></div></div>
     </header>
 
-    <div class="models-header" style="background: var(--primary); color: white; padding: 40px 0; text-align: center;">
+    <div class="section-padding bg-light">
         <div class="container">
-            <h1 style="font-size: 2.5rem; font-family: 'Oswald', sans-serif; text-transform: uppercase;">Get On-Road Price</h1>
-            <p>Fill the details below to get the best quote instantly.</p>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="action-bar">
-            <a href="service.html" class="action-item"><span class="icon">📅</span><span>Book Service</span></a>
-            <a href="testdrive.html" class="action-item"><span class="icon">🏍️</span><span>Test Ride</span></a>
-            <a href="https://wa.me/919964946511" class="action-item"><span class="icon">💬</span><span>WhatsApp</span></a>
-            <a href="tel:+919964946511" class="action-item"><span class="icon">📞</span><span>Call Now</span></a>
-        </div>
-    </div>
-
-    <section class="service-section">
-        <div class="container">
-            <div class="service-layout">
-                <div class="service-form">
-                    <form action="https://formspree.io/f/xqezrzkn" method="POST">
-                        <input type="hidden" name="_next" value="thankyou.html">
-                        <label>Full Name <span class="required">*</span></label>
-                        <input type="text" name="name" required>
-                        <label>Phone Number <span class="required">*</span></label>
-                        <input type="tel" name="phone" required>
-                        <label>Select Model</label>
-                        <select name="model" required>
-                            <option value="Apache Series">Apache Series</option>
-                            <option value="Jupiter Series">Jupiter Series</option>
-                            <option value="Ntorq">Ntorq</option>
-                        </select>
-                        <label>Plan</label>
-                        <select name="plan">
-                            <option value="Cash">Cash</option>
-                            <option value="Finance">Finance/EMI</option>
-                        </select>
-                        <button type="submit" class="btn-submit-service">Request Quote</button>
-                    </form>
-                </div>
-                <div class="service-info">
-                    <h3>Why buy from us?</h3>
-                    <div class="step-item"><div class="step-text">✓ Best On-Road Prices</div></div>
-                    <div class="step-item"><div class="step-text">✓ Quick Finance Approvals</div></div>
-                    <div class="step-item"><div class="step-text">✓ Fast Delivery</div></div>
-                </div>
+            <div class="text-center" style="margin-bottom: 40px;">
+                <h1 style="font-family: 'Oswald'; color: var(--primary); text-transform: uppercase;">Get On-Road Price</h1>
+                <p>Get the best price quote for your dream TVS vehicle.</p>
             </div>
+
+            <form class="service-form" style="max-width: 800px; margin: 0 auto;">
+                <label>Your Name</label><input type="text" placeholder="Enter Full Name" required>
+                <label>Phone Number</label><input type="tel" placeholder="Enter Mobile Number" required>
+                <label>Select Model</label>
+                <select>
+                    <option>Select Vehicle</option>
+                    <option>Jupiter 110/125</option>
+                    <option>Ntorq 125</option>
+                    <option>Apache Series</option>
+                    <option>Raider 125</option>
+                    <option>iQube Electric</option>
+                    <option>XL100</option>
+                </select>
+                <label>Message (Optional)</label><textarea rows="3" placeholder="Any specific requirements?"></textarea>
+                
+                <button type="submit" class="btn-submit-service">Request Quote</button>
+
+                <div class="how-it-works">
+                    <h4>How it works</h4>
+                    <p><strong>Step 1:</strong> Select Model.</p>
+                    <p><strong>Step 2:</strong> Get Offer Call.</p>
+                    <p><strong>Step 3:</strong> Best Price Deal.</p>
+                </div>
+            </form>
         </div>
-    </section>
+    </div>
 
     <footer>
-        <div class="footer-top-bar">
-            <div class="container footer-contact-row">
-                <div class="footer-contact-item"><div class="footer-icon-circle">✉</div><div class="footer-contact-text">tirumalatvs716@gmail.com</div></div>
-                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div class="footer-contact-text">+91 99649 46511</div></div>
-            </div>
-        </div>
         <div class="footer-main">
             <div class="container footer-cols">
-                <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="about.html">About Us</a></li><li><a href="contact.html">Contact Us</a></li><li><a href="service.html">Book Service</a></li><li><a href="testdrive.html">Test Drive</a></li></ul></div>
-                <div class="footer-col"><h4>Models</h4><ul class="footer-links"><li><a href="models.html#motorcycles">Motorcycles</a></li><li><a href="models.html#scooters">Scooters</a></li></ul></div>
-                <div class="footer-col"><h4>Showrooms</h4><ul class="footer-links"><li><a href="contact.html">Tirumala TVS Bidarahalli</a></li></ul></div>
+                <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="index.html">Home</a></li><li><a href="service.html">Book Service</a></li><li><a href="contact.html">Contact Us</a></li></ul></div>
+                <div class="footer-col"><h4>Showroom</h4><p>Tirumala TVS Bidarahalli,<br>Main Road, Bangalore - 560049</p></div>
+                <div class="footer-col"><h4>Contact</h4><p>Sales: +91 99649 46512<br>Service: +91 99649 46511</p></div>
             </div>
         </div>
-        <div class="container"><div class="footer-bottom"><div>Copyright © 2025 Tirumala TVS. All rights reserved.</div></div></div>
+        <div class="container footer-bottom"><p>© 2025 Tirumala TVS. All rights reserved.</p></div>
     </footer>
-
-    <a href="https://wa.me/919964946511" class="whatsapp-float" target="_blank">💬</a>
-    <a href="https://www.instagram.com/tirumalatvs_bidarahalli/" class="instagram-float" target="_blank">📸</a>
-    <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
-
-    <script>
-        window.addEventListener('scroll', function() {
-            var scrollBtn = document.querySelector('.scroll-top-btn');
-            if (window.scrollY > 300) { scrollBtn.classList.add('visible'); } 
-            else { scrollBtn.classList.remove('visible'); }
-        });
-    </script>
 </body>
 </html>
