--- a/service.html
+++ b/service.html
@@ -32,7 +32,7 @@
                 <p>Expert care for your TVS vehicle.</p>
             </div>
 
-            <form class="service-form" style="max-width: 800px; margin: 0 auto;">
+            <form class="service-form">
                 <label>Your Name</label><input type="text" placeholder="Enter Full Name" required>
                 <label>Phone Number</label><input type="tel" placeholder="Enter Mobile Number" required>
                 <label>Vehicle Model</label>
@@ -44,6 +44,7 @@
                     <option>Raider 125</option>
                     <option>iQube Electric</option>
                     <option>XL100</option>
+                    <option>Other</option>
                 </select>
                 <label>Service Type</label>
                 <select>
@@ -63,7 +64,7 @@
                     <p><strong>Step 3:</strong> Drop vehicle.</p>
                 </div>
             </form>
-        </div>
+            </div>
     </div>
 
     <footer>
