--- a/testdrive.html
+++ b/testdrive.html
@@ -32,7 +32,7 @@
                 <p>Feel the ride before you buy.</p>
             </div>
 
-            <form class="service-form" style="max-width: 800px; margin: 0 auto;">
+            <form class="service-form">
                 <label>Your Name</label><input type="text" placeholder="Enter Full Name" required>
                 <label>Phone Number</label><input type="tel" placeholder="Enter Mobile Number" required>
                 <label>Select Model</label>
