--- a/service.html
+++ b/service.html
@@ -11,7 +11,7 @@
 
     <header class="main-header">
         <div class="container header-top">
-            <a href="index.html" class="logo-img-wrapper"><img src="assets/tirumala-logo.jpg" alt="Tirumala TVS" class="header-logo-img"></a>
+            <a href="index.html" class="logo">Tirumala <span>TVS</span></a>
             <div class="header-btn-group">
                 <a href="service.html" class="btn-header">Book Service</a>
                 <a href="quotation.html" class="btn-header">Get Quotation</a>
@@ -64,7 +64,7 @@
                     <p><strong>Step 3:</strong> Drop vehicle.</p>
                 </div>
             </form>
-            </div>
+        </div>
     </div>
 
     <footer>
