--- a/models.html
+++ b/models.html
@@ -11,7 +11,7 @@
 
     <header class="main-header">
         <div class="container header-top">
-            <a href="index.html" class="logo-img-wrapper"><img src="assets/tirumala-logo.jpg" alt="Tirumala TVS" class="header-logo-img"></a>
+            <a href="index.html" class="logo">Tirumala <span>TVS</span></a>
             <div class="header-btn-group">
                 <a href="service.html" class="btn-header">Book Service</a>
                 <a href="quotation.html" class="btn-header">Get Quotation</a>
@@ -26,7 +26,6 @@
                     <li class="nav-item"><a href="models.html#motorcycles">Motorcycles</a></li>
                     <li class="nav-item"><a href="models.html#scooters">Scooters</a></li>
                     <li class="nav-item"><a href="models.html#electric">Electric</a></li>
-                    <li class="nav-item"><a href="models.html#mopeds">Mopeds</a></li>
                     <li class="nav-item"><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
@@ -42,18 +41,9 @@
 
     <section class="section-padding">
         <div class="container">
-            
             <div id="motorcycles" style="margin-bottom: 80px;">
                 <h2 style="font-family: 'Oswald', sans-serif; font-size: 2rem; margin-bottom: 30px; border-left: 5px solid var(--accent); padding-left: 15px;">MOTORCYCLES</h2>
                 <div class="grid-3">
-                    <a href="models/rr310.html" class="clean-card">
-                        <div class="clean-card-img"><img src="assets/rr310.jpg" alt="Apache RR 310"></div>
-                        <div class="clean-card-content"><h3>TVS Apache RR 310</h3><div class="price">Starting at ₹ 2,72,000/-</div></div>
-                    </a>
-                    <a href="models/apache200.html" class="clean-card">
-                        <div class="clean-card-img"><img src="assets/apache200.jpg" alt="Apache 200"></div>
-                        <div class="clean-card-content"><h3>Apache RTR 200 4V</h3><div class="price">Starting at ₹ 1,46,000/-</div></div>
-                    </a>
                     <a href="models/apache160.html" class="clean-card">
                         <div class="clean-card-img"><img src="assets/apache160.jpg" alt="Apache 160"></div>
                         <div class="clean-card-content"><h3>Apache RTR 160 4V</h3><div class="price">Starting at ₹ 1,24,000/-</div></div>
@@ -66,14 +56,6 @@
                         <div class="clean-card-img"><img src="assets/ronin.jpg" alt="Ronin"></div>
                         <div class="clean-card-content"><h3>TVS Ronin</h3><div class="price">Starting at ₹ 1,49,000/-</div></div>
                     </a>
-                    <a href="models/radeon.html" class="clean-card">
-                        <div class="clean-card-img"><img src="assets/radeon.jpg" alt="Radeon"></div>
-                        <div class="clean-card-content"><h3>TVS Radeon</h3><div class="price">Starting at ₹ 62,000/-</div></div>
-                    </a>
-                    <a href="models/sport.html" class="clean-card">
-                        <div class="clean-card-img"><img src="assets/sport.jpg" alt="Sport"></div>
-                        <div class="clean-card-content"><h3>TVS Sport</h3><div class="price">Starting at ₹ 59,000/-</div></div>
-                    </a>
                 </div>
             </div>
 
@@ -84,75 +66,24 @@
                         <div class="clean-card-img"><img src="assets/jupiter113.jpg" alt="Jupiter 110"></div>
                         <div class="clean-card-content"><h3>New Jupiter 110</h3><div class="price">Starting at ₹ 73,000/-</div></div>
                     </a>
-                    <a href="models/jupiter125.html" class="clean-card">
-                        <div class="clean-card-img"><img src="assets/jupiter125.jpg" alt="Jupiter 125"></div>
-                        <div class="clean-card-content"><h3>Jupiter 125</h3><div class="price">Starting at ₹ 86,000/-</div></div>
-                    </a>
                     <a href="models/ntorq125.html" class="clean-card">
                         <div class="clean-card-img"><img src="assets/ntorq125.jpg" alt="Ntorq"></div>
                         <div class="clean-card-content"><h3>Ntorq 125</h3><div class="price">Starting at ₹ 84,000/-</div></div>
                     </a>
-                    <a href="models/zest110.html" class="clean-card">
-                        <div class="clean-card-img"><img src="assets/zest110.jpg" alt="Zest"></div>
-                        <div class="clean-card-content"><h3>Scooty Zest 110</h3><div class="price">Starting at ₹ 75,000/-</div></div>
-                    </a>
                 </div>
             </div>
-
-            <div id="electric" style="margin-bottom: 80px;">
-                <h2 style="font-family: 'Oswald', sans-serif; font-size: 2rem; margin-bottom: 30px; border-left: 5px solid var(--accent); padding-left: 15px;">ELECTRIC</h2>
-                <div class="grid-3">
-                    <a href="models/iqube.html" class="clean-card">
-                        <div class="clean-card-img"><img src="assets/iqube.jpg" alt="iQube"></div>
-                        <div class="clean-card-content"><h3>TVS iQube</h3><div class="price">Starting at ₹ 1,17,000/-</div></div>
-                    </a>
-                </div>
-            </div>
-
-            <div id="mopeds" style="margin-bottom: 80px;">
-                <h2 style="font-family: 'Oswald', sans-serif; font-size: 2rem; margin-bottom: 30px; border-left: 5px solid var(--accent); padding-left: 15px;">MOPEDS</h2>
-                <div class="grid-3">
-                    <a href="models/xl100.html" class="clean-card">
-                        <div class="clean-card-img"><img src="assets/xl100.jpg" alt="XL100"></div>
-                        <div class="clean-card-content"><h3>XL100 Heavy Duty</h3><div class="price">Starting at ₹ 46,000/-</div></div>
-                    </a>
-                </div>
-            </div>
-
         </div>
     </section>
 
     <footer>
-        <div class="footer-top-bar">
-            <div class="container footer-contact-row">
-                <div class="footer-contact-item"><div class="footer-icon-circle">✉</div><div class="footer-contact-text">tirumalatvs716@gmail.com</div></div>
-                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div><div class="footer-contact-text">Sales: +91 99649 46512</div><div class="footer-contact-text" style="font-size:0.9em; opacity:0.9;">Service: +91 99649 46511</div></div></div>
-            </div>
-        </div>
         <div class="footer-main">
             <div class="container footer-cols">
                 <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="index.html">Home</a></li><li><a href="service.html">Book Service</a></li><li><a href="contact.html">Contact Us</a></li></ul></div>
-                <div class="footer-col"><h4>Models</h4><ul class="footer-links"><li><a href="models.html#motorcycles">Motorcycles</a></li><li><a href="models.html#scooters">Scooters</a></li></ul></div>
                 <div class="footer-col"><h4>Showroom</h4><p>Tirumala TVS Bidarahalli,<br>Main Road, Bangalore - 560049</p></div>
+                <div class="footer-col"><h4>Contact</h4><p>Sales: +91 99649 46512<br>Service: +91 99649 46511</p></div>
             </div>
         </div>
         <div class="container footer-bottom"><p>© 2025 Tirumala TVS. All rights reserved.</p></div>
     </footer>
-
-    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
-    <a href="https://www.instagram.com/tirumalatvs_bidarahalli/" class="instagram-float" target="_blank">📸</a>
-    <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
-
-    <script>
-        function toggleMenu() {
-            var nav = document.getElementById("navMenu");
-            if(nav.style.display === "block") { nav.style.display = "none"; } 
-            else { nav.style.display = "block"; nav.style.position="absolute"; nav.style.top="100%"; nav.style.left="0"; nav.style.width="100%"; nav.style.zIndex="1000"; }
-        }
-        window.addEventListener('scroll', function() {
-            var scrollBtn = document.querySelector('.scroll-top-btn');
-            if (window.scrollY > 300) { scrollBtn.classList.add('visible'); } else { scrollBtn.classList.remove('visible'); }
-        });
-    </script>
 </body>
 </html>
